2001-01-07  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/powerpc/elf/libc-start.c (__libc_start_main): Don't call
	_dl_aux_init for shared libraries.

	* sysdeps/unix/sysv/linux/glob64.c: Moved to ...
	* sysdeps/gnu/glob64.c: ...here.  New file.

2001-01-07  Ben Collins  <bcollins@debian.org>

	* manual/examples/longopt.c: Make the "struct option" a little
	more like it should be, adding usage of required_argument,
	noargument and such, and also setting the options string right.

	* manual/sysinfo.texi (Load Average): New section, documents
	getloadavg().

2001-01-06  Ulrich Drepper  <drepper@redhat.com>

	* version.h (VERSION): Bump to 2.2.1.

	* sysdeps/unix/sysv/linux/mips/Dist: Remove sys/acct.h.
	* sysdeps/alpha/Dist: Add alphaev6/stxncpy.S and alphaev6/stxcpy.S.
	* sysdeps/unix/sysv/aix/Dist: Add uitrunc.c, savef.S, and restf.S.
	* dlfcn/Makefile (distribute): Add errmsg1mod.c.
	* Makefile (distribute): Add include/libc-internal.h.
	* libio/Makefile (distribute): Avoid overwriting.

	* iconvdata/ibm937.c (BODY to IBM937): Correct several mistakes in
	buffer and table handling.

2001-01-05  H.J. Lu  <hjl@gnu.org>

	* elf/dl-support.c (non_dynamic_init): Move the auxiliary
	vector checking to ...
	(_dl_aux_init): Here. New function. Defined only if
	HAVE_AUX_VECTOR is defined.

	* sysdeps/generic/libc-start.c (__libc_start_main): Call
	_dl_aux_init for static binaries if HAVE_AUX_VECTOR is defined.

	* sysdeps/powerpc/elf/libc-start.c (__libc_start_main): Call
	_dl_aux_init.

	* sysdeps/unix/sysv/linux/ldsodefs.h (DL_FIND_AUXV): Removed.
	(HAVE_AUX_VECTOR): Defined.
	(_dl_aux_init): Declared.

2001-01-05  Ben Collins  <bcollins@debian.org>

	* manual/string.texi (Finding Tokens in a String): Document XPG
	basename() and dirname(), as well as GNU basename().

2001-01-05  Jakub Jelinek  <jakub@redhat.com>

	* Makeconfig (preprocess-version): Replace -traditional with
	-x assembler-with-cpp.

2001-01-05  Joseph S. Myers  <jsm28@cam.ac.uk>
